[middleware-coreengine] Fix testcases.