@@ -144,12 +144,9 @@ public class FinancialAccountingYearApplicationService extends AbstractApplicati
         ObjectMapper objectMapper = new ObjectMapper();
         List<FinancialAccountingYearDTO> dtoList = new ArrayList<>();
         try {
-            List<MutationEntity> unauthorizedEntities = mutationsDomainService.getUnauthorizedMutation(
-                    getTaskCode(), AUTHORIZED_N);
-            dtoList.addAll(domainService.getFinancialAccountingYears().stream()
-                    .map(entity -> assembler.convertEntityToDto(entity))
-                    .collect(Collectors.toList()));
-            dtoList.addAll(unauthorizedEntities.stream().map(entity -> {
+            List<MutationEntity> entities = mutationsDomainService.getMutations(
+                    getTaskCode());
+            dtoList.addAll(entities.stream().map(entity -> {
                 String data = entity.getPayload().getData();
                 FinancialAccountingYearDTO dto = null;
                 try {
@@ -160,7 +157,7 @@ public class FinancialAccountingYearApplicationService extends AbstractApplicati
                     ExceptionUtil.handleException(JSON_PARSING_ERROR);
                 }
                 return dto;
-            }).collect(Collectors.toList()));
+            }).toList());
             fillTransactionStatus(transactionStatus);
         }
         catch (Exception exception) {
